# union-plugin-template

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: Plugin.hpp  Sources.hpp
